more latest changes

--- a/project.ipynb
+++ b/project.ipynb
@@ -336,39 +336,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialization\n",
-    "init_variance_a = random.randint(0, 10)\n",
-    "init_variance_b = random.randint(0, 10)\n",
+    "cov_a = random.randint(1, 2)\n",
+    "cov_b = random.randint(1, 2)\n",
     "\n",
     "beta_a0 = beta_b0 = 0\n",
     "beta_a1 = beta_b1 = 1\n",
-    "probability_a = probability_b = 0.5\n"
+    "proba_a = proba_b = 0.5\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def E(l):\n",
-    "#     beta_a0=lis1[0]\n",
-    "#     beta_b0=lis1[0]\n",
-    "#     beta_a1=lis1[0]\n",
-    "#     beta_b1=lis\n",
-    "#     cov1=lis1[2]\n",
-    "#     cov2=lis1[3]\n",
-    "#     proba_a=lis1[4]\n",
-    "#     proba_b=lis1[5]\n",
+    "def E(l):\n",
+    "    beta_a0=l[0]\n",
+    "    beta_b0=l[1]\n",
+    "    beta_a1=l[2]\n",
+    "    beta_b1=l[3]\n",
+    "    cov_a=l[4]\n",
+    "    cov_b=l[5]\n",
+    "    proba_a=l[6]\n",
+    "    proba_b=l[7]\n",
     "\n",
-    "#     w_a = probability_a * (1/np.sqrt(2*np.pi*init_variance_a)) * np.exp((-1/(2*init_variance_a) * (df.y - beta_a0 - beta_a1*df.x)**2))\n",
-    "#     w_b = probability_b * (1/np.sqrt(2*np.pi*init_variance_b)) * np.exp((-1/(2*init_variance_b) * (df.y - beta_b0 - beta_b1*df.x)**2))\n",
+    "    w_a = proba_a * (1/np.sqrt(2*np.pi*cov_a)) * np.exp((-1/(2*cov_a) * (df.y - beta_a0 - beta_a1*df.x)**2))\n",
+    "    w_b = proba_b * (1/np.sqrt(2*np.pi*cov_b)) * np.exp((-1/(2*cov_b) * (df.y - beta_b0 - beta_b1*df.x)**2))\n",
     "\n",
-    "#     return(w_a,w_b)\n"
+    "    return(w_a, w_b)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def M(l):\n",
+    "    \n",
+    "    w_a, w_b = E([beta_a0,\n",
+    "              beta_b0,\n",
+    "              beta_a1,\n",
+    "              beta_b1,\n",
+    "              cov_a,\n",
+    "              cov_b,\n",
+    "              proba_a,\n",
+    "              proba_b\n",
+    "             ])\n",
+    "    \n",
+    "    beta_a0 = ((df.y - beta_a1 * df.x) * w_a).sum()/ w_a.sum()\n",
+    "    beta_b0 = ((df.y - beta_b1 * df.x) * w_b).sum()/ w_b.sum()\n",
+    "\n",
+    "    beta_a1 = ((df.y - beta_a0) * w_a).sum() / (df.x * w_a).sum()\n",
+    "    beta_b1 = ((df.y - beta_b0) * w_b).sum() / (df.x * w_b).sum()\n",
+    "\n",
+    "    cov_a = ((df.y - beta_a1*df.x - beta_a0)**2 * w_a).sum()/w_a.sum()\n",
+    "    cov_b = ((df.y - beta_b1*df.x - beta_b0)**2 * w_b).sum()/w_b.sum()\n",
+    "\n",
+    "    proba_a = w_a.sum()/ (w_a + w_b).sum()\n",
+    "    proba_b = w_b.sum()/ (w_a + w_b).sum()\n",
+    "    \n",
+    "    return([beta_a0,\n",
+    "              beta_b0,\n",
+    "              beta_a1,\n",
+    "              beta_b1,\n",
+    "              cov_a,\n",
+    "              cov_b,\n",
+    "              proba_a,\n",
+    "              proba_b,\n",
+    "            w_a,\n",
+    "            w_b])\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_likely():\n",
+    "    #do stuff here\n",
+    "    "
    ]
   },
   {
